RedditClient is working properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_login">Login</string>
+
+    <!--AuthenticateBotTask-->
+    <string name="bot_platform">android</string>
+    <string name="bot_appId">com.magicbuddha.redditorsdigest</string>
+    <string name="bot_version">v0.1</string>
 </resources>
