--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_login">Login</string>
+    <string name="action_search">SEARCH</string>
 
     <!--AuthenticateBotTask-->
     <string name="bot_platform">android</string>
@@ -12,4 +12,7 @@
     <string name="bot_version">v0.1</string>
     <string name="no_subscription_message">There are no post to show. Try subscribing to some reddits.</string>
     <string name="no_subscription_button">SEARCH SUBREDDITS</string>
+    <string name="hint_search">Search</string>
+    <string name="search_button_content_description">Search Button</string>
+    <string name="search_no_content">No results were returned from reddit. Try searching again with a different keyword.</string>
 </resources>
