--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_search">SEARCH</string>
 
     <!--AuthenticateBotTask-->
-    <string name="bot_platform">android</string>
+    <string name="bot_platform">bot</string>
     <string name="bot_appId">com.magicbuddha.redditorsdigest</string>
     <string name="bot_version">v0.1</string>
     <string name="no_subscription_message">There are no post to show. Try subscribing to some reddits.</string>
