--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="hint_search">Search</string>
     <string name="search_button_content_description">Search Button</string>
     <string name="search_no_content">No results were returned from reddit. Try searching again with a different keyword.</string>
+    <string name="author_prefix">By </string>
 </resources>
