Updated pager and home activity to support infinite scroll. cheers

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="fontFamily">sans-serif</string>
     <string name="subreddit_prefix">/r/</string>
     <string name="points">points</string>
+    <string name="no_comments">There are no comments for this submission.</string>
 </resources>
