Implemented a way to easily unsubscribe.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Redditors Digest</string>
 
     <string name="action_search">SEARCH</string>
+    <string name="action_manage">MANAGE</string>
 
     <!--AuthenticateBotTask-->
     <string name="no_subscription_message">There are no post to show. Try subscribing to some reddits.</string>
