--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
 
     <!--ads-->
     <string name="search_subreddits_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="submission_fob_cd">Open with another application</string>
+    <string name="full_screen_image_cd">Full size image</string>
+    <string name="subscribe_button_cd">Subscribe button</string>
 </resources>
