--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="submission_fob_cd">Open with another application</string>
     <string name="full_screen_image_cd">Full size image</string>
     <string name="subscribe_button_cd">Subscribe button</string>
+    <string name="could_not_authenticate">Could not authenticate at this time. Please try later.</string>
+    <string name="user_agent">WHATEVER</string>
+    <string name="subs">Subs:</string>
+    <string name="widget_default_title">Please subscribe to a subreddit.</string>
 </resources>
